updated drum set

--- a/Week8/Day3/Exercises/Drum_Set/index.html
+++ b/Week8/Day3/Exercises/Drum_Set/index.html
@@ -7,7 +7,7 @@
     <title>Drum Set</title>
 </head>
 <body>
-    <div class="drum_kit">
+    <div class="drum-kit">
         <div class="drum" data-key="65">A</div>
         <div class="drum" data-key="83">S</div>
         <div class="drum" data-key="68">D</div>
