Updated Daily Challenge

--- a/Week13/Day4/DailyChallenges/emoji-game/public/index.html
+++ b/Week13/Day4/DailyChallenges/emoji-game/public/index.html
@@ -12,6 +12,7 @@
         <form id="guess-form"></form>
         <div id="feedback"></div>
         <p>Score: <span id="score">0</span></p>
+        <ul id="leaderboard"></ul>
     </div>
 
     <h2>🏆 Leaderboard</h2>
