Updated emoji-game files

--- a/Week13/Day4/DailyChallenges/emoji-game/public/index.html
+++ b/Week13/Day4/DailyChallenges/emoji-game/public/index.html
@@ -18,6 +18,6 @@
     <h2>🏆 Leaderboard</h2>
     <ul id="leaderboard"></ul>
 
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
